<resources>
    <string name="app_name">Rapid API</string>
    <string name="title_json">JSON</string>
    <string name="title_anime">Anime</string>
    <string name="title_anime_by_genre">Anime By Genre</string>
    <string name="title_detail">Info Detail</string>
    <string name="data_empty">Data is empty</string>
    <string name="global_image_desc">Global image description</string>
    <string name="synopsis">Synopsis</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="sort_order">Sort Order</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>
    <string name="submit">Submit</string>
    <string name="keyword">Keyword</string>
</resources>