<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFormFilter"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/search" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textCapWords|textCapSentences"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/sort_order" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"/>
        <RadioButton
            android:id="@+id/rbDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>